--- a/.github/workflows/dl_tiles.yml
+++ b/.github/workflows/dl_tiles.yml
@@ -47,5 +47,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add automatic
-          git commit -m "tiles update"
+          git commit -m "tiles update" || echo "No changes to commit"
           git push
